<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wagba</string>
    <string name="RestaurantName">RestaurantName</string>
    <string name="RestaurantRating">RestaurantRating</string>
    <string name="DeliveryTime">DeliveryTime</string>
    <string name="DeliveryCost">DeliveryCost</string>
    <string name="DishName">DishName</string>
    <string name="DishPrice">DishPrice</string>
    <string name="DishAvailable">DishAvailable</string>
    <string name="Login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="Signup">SignUp</string>
    <string name="restaurantname">RestaurantName</string>
    <string name="price">Price</string>
    <string name="num_of_items">num_of_items</string>
    <string name="date">date</string>
    <string name="reorder">Reorder</string>
    <string name="order_details">order_details</string>
    <string name="estimated_time">estimated_time</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="map">map</string>
    <string name="cash">Cash</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="credit_card">Credit Card</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="place_order">Place Order</string>
    <string name="add_new_card">Add New Card</string>
    <string name="save_card_info">Save Card Info</string>
    <string name="add_dishes">Add Dishes</string>
    <string name="remove_all_items">Remove All Items</string>
    <string name="edit">Edit</string>
    <string name="order_status">Order Status</string>
    <string name="payment_details">Payment Details</string>
</resources>