<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dish_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"

        />

    <TextView
        android:id="@+id/dish_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/dish_image"
        app:layout_constraintTop_toBottomOf="@id/dish_image"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/DishName"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        />
    <TextView
        android:id="@+id/dish_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/dish_image"
        app:layout_constraintTop_toBottomOf="@id/dish_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/DishPrice"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        />

    <TextView
        android:id="@+id/dish_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/dish_image"
        app:layout_constraintTop_toBottomOf="@id/dish_price"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/DishAvailable"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>